[metadata]
name = protopop
version = attr: protopop.1.0.0
author = Theo Richardson
author_email = terichard57@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/richardson-t/protopop
description = protopop
long_description = file: README.md
long_description_content_type = text/markdown
edit_on_github = False
github_project = richardson-t/protopop

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    scipy